# liveserve-cdn

./: README.md  pyproject.toml
cli/: client.py
client/: client.py
golive_lbr/golivelbr/: config.py  listener.py  worker.py
liveserve/: get_page.py  handlers.py  load_setting.py  page_management.py  reverse_proxy.py  server.py
liveserve/acceptor/: acceptor.py
liveserve/app_factory/: app_factory.py  cert_utils.py  notes.py  notes1.py  parse.py  ssl_cert.py
liveserve/lbr/: config.py  listener.py  worker.py
