[tool.poetry]
name = "delivery-network"
version = "0.1.0"
description = ""
authors = ["hopeJRD <jordanh0pe@pm.me>"]
readme = "README.md"
packages = [{include = "delivery_network"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
